--- a/about us.html
+++ b/about us.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/index.css" />
     <title>About Us - FreelanceHub</title>
     <style>
         body {
@@ -17,15 +18,55 @@
             margin: 0 auto;
             padding: 20px;
         }
-        h1, h2 {
+        .container h1, h2 {
             text-align: center;
         }
-        p {
+        .container p {
             margin-bottom: 20px;
         }
     </style>
 </head>
 <body>
+    <header class="header">
+        <div class="header_wrapper wrapper">
+          <div class="header_left">
+            <a href="./index.html">
+            <img src="./assets/final logo1.png" alt="logo">
+            </a>
+            <ul class="header_left_list">
+              <a href="./talentpage.html">
+              <li class="header_left_list_item">
+                Find Talent
+              </li>
+              </a>
+              <a href="./Workpage.html">
+              <li class="header_left_list_item">
+                Find Work
+              </li>
+              </a>
+              <a href="./about us.html">
+              <li class="header_left_list_item">
+                About SkillHive
+              </li>
+              </a>
+              <a href="./contact us.html">
+              <li class="header_left_list_item">
+                Contact Us
+              </li>
+              </a>
+              <li>
+                <a href="login.html">
+                  <button class="btn_primary" onclick="">Log In</button>
+                  </a>    
+              </li>
+              <li>
+                <a href="signup.html">
+                  <button class="btn_secondary">Sign Up</button>
+                  </a>
+              </li>
+            </div>
+        </div>
+      </header>
     <div class="container">
         <h1>About FreelanceHub</h1>
         <p>Welcome to FreelanceHub, the ultimate platform connecting talented freelancers with businesses and individuals seeking top-notch services. Our mission is to empower people to work independently, pursue their passions, and build successful careers on their terms.</p>
