--- a/talentpage.html
+++ b/talentpage.html
@@ -7,7 +7,6 @@
 <link rel="stylesheet" href="./css/talentpage.css">
 </head>
 <body>
-    
     <header class="header">
         <div class="header_wrapper wrapper">
           <div class="header_left">
@@ -48,6 +47,9 @@
             </div>
         </div>
       </header>
+      <div>
+        <h1>Talent</h1>
+      </div>
       <footer class="footer">
         <div class="wrapper">
           <div class="footer_middle">
